// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`friendly formatter module map polling finishes with errors finished the moduleMapSpinner with success 1`] = `
Array [
  "Polling Holocron Module map failed",
]
`;

exports[`friendly formatter module map polling finishes with errors writes the log statement 1`] = `
"<red>error</red>: sample test error
<skipping for files>"
`;

exports[`friendly formatter module map polling finishes with no updates finished the moduleMapSpinner with success 1`] = `
Array [
  "Polled Holocron Module map: no updates (polling again in 5s)",
]
`;

exports[`friendly formatter module map polling finishes with updates finished the moduleMapSpinner with success 1`] = `
Array [
  "Polled Holocron Module map: 2 updates",
]
`;

exports[`friendly formatter module map polling finishes with updates writes a re-formatted log statement 1`] = `
"Modules updated: {
  \\"a\\": \\"1.2.3\\",
  \\"b\\": \\"4.5.6\\"
}"
`;

exports[`friendly formatter pretty-prints an incoming request 1`] = `"<red>error</red>: 🌍 ➡ 💻 <green>200</green> OK GET https://example.com/resource 13ms"`;

exports[`friendly formatter prints the level with color 1`] = `"<red>error</red>: hello"`;

exports[`friendly formatter startup ssrServer bootstrap of holocron module loading failed stops the appServerSpinner with failure when it is enabled 1`] = `
Array [
  "Failed to load Holocron module (modulesPath/moduleName/version/moduleName.server.js)",
]
`;

exports[`friendly formatter startup ssrServer bootstrap of holocron module loading failed stops the appServerSpinner with failure when the root module is not in the module map 1`] = `
Array [
  "unable to find root module \\"not-in-module-map\\" in the module map",
]
`;

exports[`friendly formatter unknown type is formatted by util.format 1`] = `"<red>error</red>: hello, world"`;
